Logo on our website and banners translation

--- a/sponsor.html
+++ b/sponsor.html
@@ -435,21 +435,20 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on our Website (Everywhere)</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Logo on our website (everywhere)</td><td>-</td><td>M</td><td>L</td><td>XL</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo on our Website (Everywhere)</h3>
-												<p>Logotipo no site da SINFO que estará visível em todas as páginas do website.</p>
+								            	<h3>Logo on our website (everywhere)</h3>
+												<p>The Company logo will be on SINFO’s website and will be visible on every page and section of the website.</p>
 											</div>
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Logo on banners</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Logo on our banners</td><td>-</td><td></td><td>L</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo on banners</h3>
-												<p>The company's logo will be included in all banners that we have at campus gates as well as in several<br>
-												campus buildings.</p>
+								            	<h3>Logo on our banners</h3>
+												<p>TThe Company logo will be on the banners located at both principal entries of Instituto Superior Técnico during the event.</p>
 												<p><small>Banner placed at the main entrance of the IST (at Alameda campus) in the nineteenth edition of SINFO.</small></p>
 											</div>
 							            </td></tr>
