Logo on our social network and during break of live stream translation

--- a/sponsor.html
+++ b/sponsor.html
@@ -454,20 +454,20 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on our social networks cover photo</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Logo on our Social Network's cover</td><td>-</td><td>-</td><td>L</td><td>XL</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo on our social networks cover photo</h3>
-												<p>Logotipo no cabeçalho das páginas das redes sociais da SINFO.</p>
+								            	<h3>Logo on our Social Network's cover</h3>
+												<p>The Company logo will be on our Social Network's cover.</p>
 											</div>
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Personalized ad</td><td>-</td><td>-</td><td>√</td><td>√</td>
+										<td><div class="toggle">+</div>Logo during the break of our live stream</td><td>-</td><td>-</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Personalized ad</h3>
-												<p>Divulgação pela SINFO de vídeos promocionais da empresa nos ecrãs espalhados pelo recinto durante o evento.</p>
+								            	<h3>Logo during the break of our live stream</h3>
+												<p>SINFO will be transmitted online through our live stream. The Company will have their logo shown during the transmission's breaks. This offers an additional way of reaching people who couldn't make it to the event</p>
 											</div>
 							            </td></tr>
 									</tr>
