logo on our pens and merchandising traslation

--- a/sponsor.html
+++ b/sponsor.html
@@ -472,20 +472,20 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on pens</td><td>-</td><td>-</td><td>-</td><td>√</td>
+										<td><div class="toggle">+</div>Custom commercial</td><td>-</td><td>-</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo on pens</h3>
-												<p>Gold sponsor exclusive: every pen distributed in the event will have the company logo.</p>
+								            	<h3>Custom commercial</h3>
+												<p>SINFO will spread the Company’s promos/commercials on the screens scattered all around the event.</p>
 											</div>
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Logo on merchandise</td><td>-</td><td>-</td><td>-</td><td>√</td>
+										<td><div class="toggle">+</div>Logo on our merchandising</td><td>-</td><td>-</td><td>-</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo on merchandise</h3>
-												<p>Your company's logo will be present on the following merchandising items:</p>
+								            	<h3>Logo on our merchandising</h3>
+												<p>The Company logo will be on the merchandise sold at SINFO’s stand during the event.</p>
 												<ul>
 													<li>Notebooks</li>
 													<li>Pins</li>
@@ -497,11 +497,11 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on our Website</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Logo on our pens</td><td>-</td><td>M</td><td>L</td><td>XL</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo on our Website</h3>
-												<p> Logotipo no cabeçalho do site da SINFO, vísivel em todas as páginas do website.</p>
+								            	<h3>Logo on our pens</h3>
+												<p> The Company logo will be on the pens that we will be giving out during the event.</p>
 											</div>
 							            </td></tr>
 									</tr>
