Logo on website and live stream translation

--- a/sponsor.html
+++ b/sponsor.html
@@ -497,7 +497,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on our pens</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Logo on our pens</td><td>-</td><td>-</td><td>-</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Logo on our pens</h3>
@@ -506,20 +506,20 @@
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Logo during stream</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Logo on our website (header)</td><td>-</td><td>-</td><td>-</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo during stream</h3>
-												<p> Logotipo no cabeçalho do site da SINFO, vísivel em todas as páginas do website.</p>
+								            	<h3>Logo on our website (header)</h3>
+												<p> The Company logo will be on the header of SINFO’s website, visible on every page.</p>
 											</div>
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo Banner</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Logo on our live stream (static)</td><td>-</td><td>-</td><td>-</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo Banner</h3>
-												<p> Logotipo no cabeçalho do site da SINFO, vísivel em todas as páginas do website.</p>
+								            	<h3>Logo on our live stream (static)</h3>
+												<p> The Company logo will be on the live stream as a watermark, on a corner of the live stream during the total duration of it.</p>
 											</div>
 							            </td></tr>
 									</tr>
