Logo on online banners and lunch discount translation

--- a/sponsor.html
+++ b/sponsor.html
@@ -317,7 +317,7 @@
 									</tr>
 									<tr class="perksDescription">
 										<td colspan="5">
-											<p>Desconto no almoço (cantina Civil) - Possibilidade de almoçar na cantina de Civil do IST a um preço reduzido.</p>
+											<p>Lunch discount (Civil cafeteria) - The Company members present during the event will have the possibility to have lunch at the Civil cafeteria for a reduced price.</p>
 											<p>Estacionamento durante as Apresentações - Autorização para estacionar as viaturas no interior do IST durante o período em que decorre a apresentação da empresa.</p>
 											<p>Passe de acesso ao evento para X pessoas - Acesso a todas as actividades do evento: Palestras, Workshops, Apresentações e Exposição Tecnológica.</p>
 											<p>Password de acesso a Wi-Fi - Acesso livre à rede de Wi-Fi do IST durante o período do evento.</p>
@@ -523,6 +523,15 @@
 											</div>
 							            </td></tr>
 									</tr>
+                  <tr class="item alternate">
+                    <td><div class="toggle">+</div>Logo on online banners</td><td>-</td><td>-</td><td>-</td><td>L</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on online banners</h3>
+                        <p>The Company logo will be online on websites and blogs meant to spread SINFO.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
 									<tr class="price">
 										<td>Price</td><td>5€</td><td>5€</td><td>5€</td><td>5€</td>
 									</tr>
