Parking and acess pass translation

--- a/sponsor.html
+++ b/sponsor.html
@@ -318,8 +318,8 @@
 									<tr class="perksDescription">
 										<td colspan="5">
 											<p>Lunch discount (Civil cafeteria) - The Company members present during the event will have the possibility to have lunch at the Civil cafeteria for a reduced price.</p>
-											<p>Estacionamento durante as Apresentações - Autorização para estacionar as viaturas no interior do IST durante o período em que decorre a apresentação da empresa.</p>
-											<p>Passe de acesso ao evento para X pessoas - Acesso a todas as actividades do evento: Palestras, Workshops, Apresentações e Exposição Tecnológica.</p>
+											<p>Parking during the presentations - The Company will have clearance to park one (1) car inside the Instituto Superior Técnico's parking lot for the duration of the presentation.</p>
+											<p>Access pass to the event for X people - Access to all the event's activities: Talks, Workshops, Presentations, Tech Expo.</p>
 											<p>Password de acesso a Wi-Fi - Acesso livre à rede de Wi-Fi do IST durante o período do evento.</p>
 											<p>Possibilidade de acesso priveligiado às Palestras - Lugar reservado nas palestras para os membros da empresa durante o evento.</p>
 											<p>Acesso ao coffee-break - Acesso à zona de coffee-break durante a manhã e depois de almoço.</p>
