--- a/sponsor.html
+++ b/sponsor.html
@@ -320,8 +320,8 @@
 											<p>Lunch discount (Civil cafeteria) - The Company members present during the event will have the possibility to have lunch at the Civil cafeteria for a reduced price.</p>
 											<p>Parking during the presentations - The Company will have clearance to park one (1) car inside the Instituto Superior Técnico's parking lot for the duration of the presentation.</p>
 											<p>Access pass to the event for X people - Access to all the event's activities: Talks, Workshops, Presentations, Tech Expo.</p>
-											<p>Password de acesso a Wi-Fi - Acesso livre à rede de Wi-Fi do IST durante o período do evento.</p>
-											<p>Possibilidade de acesso priveligiado às Palestras - Lugar reservado nas palestras para os membros da empresa durante o evento.</p>
+											<p>Wi-Fi Access and Password - Free and unlimited access to Instituto Superior Técnico's Wi-Fi network during the event.</p>
+											<p>Privileged access to talks - Reserved spot at the talks for Company members or invitees during the event.</p>
 											<p>Acesso ao coffee-break - Acesso à zona de coffee-break durante a manhã e depois de almoço.</p>
 											<p>Jantar com membros da comissão/finalistas - Possibilidade de realizar um jantar privado com diversos membros da comissão de acordo com os interesses da empresa.</p>
 											<p>Currículos - Entrega dos currículos submetidos pelos alunos a todas as empresas participantes no evento.</p>
