Main Events perks translated

--- a/sponsor.html
+++ b/sponsor.html
@@ -322,9 +322,9 @@
 											<p>Access pass to the event for X people - Access to all the event's activities: Talks, Workshops, Presentations, Tech Expo.</p>
 											<p>Wi-Fi Access and Password - Free and unlimited access to Instituto Superior Técnico's Wi-Fi network during the event.</p>
 											<p>Privileged access to talks - Reserved spot at the talks for Company members or invitees during the event.</p>
-											<p>Acesso ao coffee-break - Acesso à zona de coffee-break durante a manhã e depois de almoço.</p>
-											<p>Jantar com membros da comissão/finalistas - Possibilidade de realizar um jantar privado com diversos membros da comissão de acordo com os interesses da empresa.</p>
-											<p>Currículos - Entrega dos currículos submetidos pelos alunos a todas as empresas participantes no evento.</p>
+											<p>Access to coffee-break - Company members or invitees will have access to the morning and afternoon coffee-breaks.</p>
+											<p>Dinner with members of SINFO’s organization team or finalists - The Company will be able to host a private dinner with several members of SINFO’s team along with other students we might recruit according to the Company’s interest.</p>
+											<p>Curriculums - The Company will be granted access to SINFO’s CV database. We collect CV’s from every student that is willing to share it with us up until two months after the event with the purpose of it being forwarded to the Companies.</p>
 										</td>
 									</tr>
 									</tbody>
