Perks anual translated

--- a/sponsor.html
+++ b/sponsor.html
@@ -182,8 +182,8 @@
 								</tr>
 								<tr class="perksDescription">
 									<td colspan="5">
-										<p>Jantar com membros da comissão/finalistas - Possibilidade de realizar um jantar privado com diversos membros da comissão de acordo com os interesses da empresa.</p>
-										<p>Currículos - Entrega dos currículos submetidos pelos alunos a todas as empresas participantes no evento.</p>
+										<p>Dinner with members of SINFO’s organization team or finalists - The Company will be able to host a private dinner with several members of SINFO’s team along with other students we might recruit according to the Company’s interest.</p>
+                    <p>Curriculums - The Company will be granted access to SINFO’s CV database. We collect CV’s from every student that is willing to share it with us up until two months after the event with the purpose of it being forwarded to the Companies.</p>
 									</td>
 								</tr>
 								</tbody>
