custom social network post and workshop sponsorship tranlated

--- a/sponsor.html
+++ b/sponsor.html
@@ -130,7 +130,7 @@
 					<h3>Packages</h3>
 
 					<div class="container">
-						<div class="heading"><div class="toggleHead">+</div>Anual</div>
+						<div class="heading"><div class="toggleHead">+</div>Annual</div>
 						<div class="content">
 							<div class="PackageContent">Package Content</div>
 							<table class="all-100 medium-100 small-100 tiny-100">
@@ -145,11 +145,11 @@
 								</thead>
 								<tbody>
 								<tr class="item">
-									<td><div class="toggle">+</div>Post(s) Personalizado nas Redes Sociais</td><td>-</td><td>1</td><td>2</td><td>3</td>
+									<td><div class="toggle">+</div>Custom Social Network Post(s)</td><td>-</td><td>1</td><td>2</td><td>3</td>
 						            <tr class="description"><td colspan="5" class="noPadding">
 						            	<div class="shadow">
-							            	<h3>Post(s) Personalizado nas Redes Sociais</h3>
-											<p>Colocação de um ou mais posts, personalizados de acordo com os critérios da empresa, nas redes sociais da SINFO.</p>
+							            	<h3>Custom Social Network Post(s)</h3>
+											<p>You can write one or more  posts, custom it, according to the company’s criteria and we’ll post it for you on our social networks.</p>
 										</div>
 						            </td></tr>
 								</tr>
@@ -157,8 +157,8 @@
 									<td><div class="toggle">+</div>Patrocinar Workshop</td><td>-</td><td>-</td><td>1</td><td>2</td>
 						            <tr class="description"><td colspan="5" class="noPadding">
 						            	<div class="shadow">
-							            	<h3>Patrocinar Workshop</h3>
-											<p>Patrocínio de um ou mais dos workshops organizados pela SINFO durante 1 ano.</p>
+							            	<h3>Workshop’s Sponsorship</h3>
+											<p>You will be the sponsor one or more Workshops organized by SINFO for a year</p>
 										</div>
 						            </td></tr>
 								</tr>
