´Logo on SINFO's Stands and frama translated

--- a/sponsor.html
+++ b/sponsor.html
@@ -149,28 +149,46 @@
 						            <tr class="description"><td colspan="5" class="noPadding">
 						            	<div class="shadow">
 							            	<h3>Custom Social Network Post(s)</h3>
-											<p>You can write one or more  posts, custom it, according to the company’s criteria and we’ll post it for you on our social networks.</p>
+											<p>You can write one or more  posts, custom it, according to the company's criteria and we'll post it for you on our social networks.</p>
 										</div>
 						            </td></tr>
 								</tr>
 								<tr class="item alternate">
-									<td><div class="toggle">+</div>Patrocinar Workshop</td><td>-</td><td>-</td><td>1</td><td>2</td>
+									<td><div class="toggle">+</div>Workshop's Sponsorship</td><td>-</td><td>-</td><td>1</td><td>2</td>
 						            <tr class="description"><td colspan="5" class="noPadding">
 						            	<div class="shadow">
-							            	<h3>Workshop’s Sponsorship</h3>
+							            	<h3>Workshop's Sponsorship</h3>
 											<p>You will be the sponsor one or more Workshops organized by SINFO for a year</p>
 										</div>
 						            </td></tr>
 								</tr>
 								<tr class="item">
-									<td><div class="toggle">+</div>Logo Rollups Anual</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+									<td><div class="toggle">+</div>Logo on our annual rollups</td><td>-</td><td>M</td><td>L</td><td>XL</td>
 						            <tr class="description"><td colspan="5" class="noPadding">
 						            	<div class="shadow">
-							            	<h3>Logo Rollups Anual</h3>
-											<p>Possibilidade de colocar o logo no rollup da SINFO que estará presente em todos os eventos organizados pela SINFO durante 1 ano.</p>
+							            	<h3>Logo on our annual rollups</h3>
+											<p>The Company logo will be on our annual rollup which is used at every event we have throughout the year (workshops, meetups, DevCamps, etc.</p>
 										</div>
 						            </td></tr>
 								</tr>
+                <tr class="item">
+                  <td><div class="toggle">+</div>Logo on SINFO's stand</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+                        <tr class="description"><td colspan="5" class="noPadding">
+                          <div class="shadow">
+                            <h3>Logo on SINFO's stand</h3>
+                      <p>The Company logo will be on SINFOs stand during the entire event.</p>
+                    </div>
+                        </td></tr>
+                </tr>
+                <tr class="item">
+                  <td><div class="toggle">+</div>Logo on SINFO's frame</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+                        <tr class="description"><td colspan="5" class="noPadding">
+                          <div class="shadow">
+                            <h3>Logo on SINFO's frame</h3>
+                      <p>The Company logo will be on SINFO’s frame which is used during the event to take pictures with participants, and then shared on our social networks.</p>
+                    </div>
+                        </td></tr>
+                </tr>
 								<tr class="price">
 									<td>Price</td><td>5€</td><td>5€</td><td>5€</td><td>5€</td>
 								</tr>
