open day and give workshop etc tranlated

--- a/sponsor.html
+++ b/sponsor.html
@@ -189,6 +189,24 @@
                     </div>
                         </td></tr>
                 </tr>
+                <tr class="item">
+                  <td><div class="toggle">+</div>Open day at the Company/Job shadowing</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+                        <tr class="description"><td colspan="5" class="noPadding">
+                          <div class="shadow">
+                            <h3>Open day at the Company/Job shadowing</h3>
+                      <p>During the event, SINFO will collaborate in the spread of one of these activities.</p>
+                    </div>
+                        </td></tr>
+                </tr>
+                <tr class="item">
+                  <td><div class="toggle">+</div>Give Workshop/Talk/Challenge/Custom Activity</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+                        <tr class="description"><td colspan="5" class="noPadding">
+                          <div class="shadow">
+                            <h3>Give Workshop/Talk/Challenge/Custom Activity</h3>
+                      <p>SINFO will collaborate in the organization and spread of the event held by the Company according to its interests.</p>
+                    </div>
+                        </td></tr>
+                </tr>
 								<tr class="price">
 									<td>Price</td><td>5€</td><td>5€</td><td>5€</td><td>5€</td>
 								</tr>
