--- a/sponsor.html
+++ b/sponsor.html
@@ -207,6 +207,33 @@
                     </div>
                         </td></tr>
                 </tr>
+                <tr class="item">
+                  <td><div class="toggle">+</div>Event Sponsorship</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+                        <tr class="description"><td colspan="5" class="noPadding">
+                          <div class="shadow">
+                            <h3>Event Sponsorship</h3>
+                      <p>The Company will be able to sponsorship one of the many events held by SINFO throughout the year. Such as Workshops, Hacktons, DevCamps, etc.</p>
+                    </div>
+                        </td></tr>
+                </tr>
+                <tr class="item">
+                  <td><div class="toggle">+</div>Annual logo permanently on our website</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+                        <tr class="description"><td colspan="5" class="noPadding">
+                          <div class="shadow">
+                            <h3>Annual logo permanently on our website</h3>
+                      <p>The Company logo will be permanently on SINFO’s website header for a year.</p>
+                    </div>
+                        </td></tr>
+                </tr>
+                <tr class="item">
+                  <td><div class="toggle">+</div>Curriculums</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+                        <tr class="description"><td colspan="5" class="noPadding">
+                          <div class="shadow">
+                            <h3>Curriculums</h3>
+                      <p>The Company will be granted access to SINFO’s CV database. We collect CV’s from every student during the year, which are willing to share it with us with the purpose of it being forwarded to the Companies.</p>
+                    </div>
+                        </td></tr>
+                </tr>
 								<tr class="price">
 									<td>Price</td><td>5€</td><td>5€</td><td>5€</td><td>5€</td>
 								</tr>
