--- a/sponsor.html
+++ b/sponsor.html
@@ -618,53 +618,53 @@
                 <table class="all-100">
                   <tbody>
                     <tr class="item">
-                    <td><div class="toggle">+</div>Dar Workshop</td><td>5€</td>
+                    <td><div class="toggle">+</div>Giving a Workshop</td><td>5€</td>
                           <tr class="description"><td colspan="2" class="noPadding">
                             <div class="shadow">
-                              <h3>Dar Workshop</h3>
-                              <p>Possibilidade de dar um Workshop a uma plateia de alunos que visitam o evento.</p>
+                              <h3>Giving a Workshop</h3>
+                              <p>You will have the possibility to give a Workshop to and audience of students that are present during the event.</p>
                             </div>
                           </td></tr>
                     </tr>
                     <tr class="item alternate">
-                      <td><div class="toggle">+</div>Apresentação</td><td>5€</td>
-                            <tr class="description"><td colspan="2" class="noPadding">
-                              <div class="shadow">
-                                <h3>Apresentação</h3>
-                          <p>Apresentação da empresa para uma plateia de alunos que visitam o evento.         Permitem que a empresa dê a conhecer aos alunos a sua área de trabalho, os projectos em que estão envolvidos e oportunidades de emprego que existem na empresa.</p>
-                          <ul style="list-style-type:disc;">
-                          <li>É uma sessão de 45 minutos divididos da seguinte maneira:</li>
-                          <ol>
-                          <li>5 minutos para a empresa se dar a conhecer.</li>
-                          <li>
-                          30 minutos de apresentação (Preferência por oradores Engenheiros e ex-alunos de LEIC/IST)</li>
-                          <li>Apresentações semi-técnicas costumam ser preferidos pelos alunos.</li>
-                          <li>10 minutos para perguntas e respostas.</li>
-
-                          </ol>
-                          <li>Nas salas do Centro de Congressos (com capacidade para 50 ou 70 lugares).</li>
-                        </ul>
-                        </div>
-                            </td></tr>
-                    </tr>
-                    <tr class="item">
-                    <td><div class="toggle">+</div>Patrocinio de Palestra</td><td>5€</td>
-                          <tr class="description"><td colspan="2" class="noPadding">
+                    <td><div class="toggle">+</div>Presentation</td><td>5€</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
-                              <h3>Patrocionio de Palestra</h3>
-                        <p>Referência à empresa no ínicio e fim da palestra, logo nos materiais a referir “sponsored by” e logo fixo no stream. Outras formas de patrocínio da palestra poderão ser consideradas com a organização.</p>
+                              <h3>Presentation</h3>
+                        <p>You will be able to make a company’s presentation to an audience of students that will be at the event. The presentation allows the company to introduce and explain to the students their field of work, the projects they are or were working on, but also the job opportunities that might be available to the students in the company.</p>
+                        <ul style="list-style-type:disc;">
+                        <li>45min session divided as such:</li>
+                        <ol>
+                        <li>5 minutos para a empresa se dar a conhecer.</li>
+                        <li>
+                        5min to present  the company and get the students to learn a little more about the company itself;</li>
+                        <li>30min presentation (Preferably by Engineers or LEIC/IST Alumni);</li>
+                        <li>Semi-technical presentations tend to be preferred by the students;</li>
+                        <li>10min for Q&A.</li>
+                        </ol>
+                        <li>Congress Center – rooms with capacity for 50 or 70 students.</li>
+                      </ul>
+                      </div>
+                          </td></tr>
+                  </tr>
+                    <tr class="item">
+                    <td><div class="toggle">+</div>Keynote Sponsorship</td><td>5€</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Keynote Sponsorship</h3>
+                        <p>The sponsorship and the company’s name and logo are mentioned and shown both in the begining and at the end of the talk, during the prizes draw. The Company logo or name will be on our publicity materials clearly indicating the “Sponsored by” to the specific keynote. The logo will also shown in full during our live stream, seen by more than 20.000 spectators live (data from 21st SINFO’s Jason Gregory Keynote). Other forms of keynote sponsorship can be discussed with the organizers.</p>
                       </div>
                           </td></tr>
                   </tr>
                   <tr class="item alternate">
-                    <td><div class="toggle">+</div>Post(s) Personalizado nas Redes Sociais</td><td>5€</td>
-                          <tr class="description"><td colspan="2" class="noPadding">
-                            <div class="shadow">
-                              <h3>Post(s) Personalizado nas Redes Sociais</h3>
-                        <p>Colocação de um ou mais posts, personalizados de acordo com os critérios da empresa, nas redes sociais da SINFO.</p>
-                      </div>
-                          </td></tr>
-                  </tr>
+                  <td><div class="toggle">+</div>Custom Social Network Post(s)</td><td>5€</td>
+                        <tr class="description"><td colspan="5" class="noPadding">
+                          <div class="shadow">
+                            <h3>Custom Social Network Post(s)</h3>
+                      <p>You can write one or more  posts, custom it, according to the company's criteria and we'll post it for you on our social networks.</p>
+                    </div>
+                        </td></tr>
+                </tr>
                   <tr class="item">
                     <td><div class="toggle">+</div>Documentation in the folders</td><td>5€</td>
                           <tr class="description"><td colspan="2" class="noPadding">
@@ -685,74 +685,82 @@
                           </td></tr>
                   </tr>
                   <tr class="item">
-                    <td><div class="toggle">+</div>Stand 1 dia</td><td>1</td>
-                          <tr class="description"><td colspan="2" class="noPadding">
+                    <td><div class="toggle">+</div>Stand for 1 day</td><td>5€</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
-                              <h3>Stand 1 dia</h3>
-                        <p>Possibilidade de colocar um stand durante o evento ou fora deste durante um dos eventos organizados pela SINFO, noutra data, dentro ou fora do Instituto Superior Técnico.
+                              <h3>Stand for 1 day</h3>
+                        <p>You will have the possibility to rent a (or bring your own) stand during the event, at Instituto Superior Técnico. Additionally, with “+University” this presence can be extended to more universities and more days, reaching an even higher number of students and potential candidates.
                         </p>
-                        <li>Dimensões 3 x 3 x 2,5 metros</li>
-                        <li>Alcatifado.</li>
-                        <li>Parede atrás, e dos lados caso o stand esteja ao lado de um outro stand.</li>
-                        <li>Ficha electrica tripla.</li>
-                        <li>3 focos de luz.</li>
-                        <li>Lettering com o nome da empresa.</li>
-                        <li>2 mesas</li>
-                        <li>2 cadeiras</li>
+                        <p>IST stand specifications:</p>
+                        <li>Dimensions: 3x3x2.5m;</li>
+                        <li>Carpeted;</li>
+                        <li>Back wall. (Side walls in case of being next to another stand);</li>
+                        <li>Electricity - three (3) plugs;</li>
+                        <li>Lights - three (3) spot lights;</li>
+                        <li>Lettering with the company’s name;</li>
+                        <li>Two (2) tables;</li>
+                        <li>Two (2) chairs;</li>
+                        <li>In the case of use of your own stand, the walls and lettering are removed.</li>
                         </div>
                           </td></tr>
                   </tr>
                   <tr class="item alternate">
-                    <td><div class="toggle">+</div>Stand 2 dias</td><td>3€</td>
-                          <tr class="description"><td colspan="2" class="noPadding">
+                    <td><div class="toggle">+</div>Stand for 2 days</td><td>5€</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
-                              <h3>Stand 2 dias</h3>
-                        <p>Possibilidade de colocar um stand durante o evento ou fora deste durante um dos eventos organizados pela SINFO, noutra data, dentro ou fora do Instituto Superior Técnico.
+                              <h3>Stand for 2 days</h3>
+                        <p>You will have the possibility to rent a (or bring your own) stand during the event, at Instituto Superior Técnico. Additionally, with “+University” this presence can be extended to more universities and more days, reaching an even higher number of students and potential candidates.
                         </p>
-                        <li>Dimensões 3 x 3 x 2,5 metros</li>
-                        <li>Alcatifado.</li>
-                        <li>Parede atrás, e dos lados caso o stand esteja ao lado de um outro stand.</li>
-                        <li>Ficha electrica tripla.</li>
-                        <li>3 focos de luz.</li>
-                        <li>Lettering com o nome da empresa.</li>
-                        <li>2 mesas</li>
-                        <li>2 cadeiras</li>
+                        <p>IST stand specifications:</p>
+                        <li>Dimensions: 3x3x2.5m;</li>
+                        <li>Carpeted;</li>
+                        <li>Back wall. (Side walls in case of being next to another stand);</li>
+                        <li>Electricity - three (3) plugs;</li>
+                        <li>Lights - three (3) spot lights;</li>
+                        <li>Lettering with the company’s name;</li>
+                        <li>Two (2) tables;</li>
+                        <li>Two (2) chairs;</li>
+                        <li>In the case of use of your own stand, the walls and lettering are removed.</li>
                         </div>
                           </td></tr>
                   </tr>
                    <tr class="item">
-                    <td><div class="toggle">+</div>Stand 3 dias</td><td>1</td>
-                          <tr class="description"><td colspan="2" class="noPadding">
+                    <td><div class="toggle">+</div>Stand for 3 days</td><td>5€</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
-                              <h3>Stand 3 dias</h3>
-                        <p>Possibilidade de colocar um stand durante o evento ou fora deste durante um dos eventos organizados pela SINFO, noutra data, dentro ou fora do Instituto Superior Técnico.
+                              <h3>Stand for 3 days</h3>
+                        <p>You will have the possibility to rent a (or bring your own) stand during the event, at Instituto Superior Técnico. Additionally, with “+University” this presence can be extended to more universities and more days, reaching an even higher number of students and potential candidates.
                         </p>
-                        <li>Dimensões 3 x 3 x 2,5 metros</li>
-                        <li>Alcatifado.</li>
-                        <li>Parede atrás, e dos lados caso o stand esteja ao lado de um outro stand.</li>
-                        <li>Ficha electrica tripla.</li>
-                        <li>3 focos de luz.</li>
-                        <li>Lettering com o nome da empresa.</li>
-                        <li>2 mesas</li>
-                        <li>2 cadeiras</li>
+                        <p>IST stand specifications:</p>
+                        <li>Dimensions: 3x3x2.5m;</li>
+                        <li>Carpeted;</li>
+                        <li>Back wall. (Side walls in case of being next to another stand);</li>
+                        <li>Electricity - three (3) plugs;</li>
+                        <li>Lights - three (3) spot lights;</li>
+                        <li>Lettering with the company’s name;</li>
+                        <li>Two (2) tables;</li>
+                        <li>Two (2) chairs;</li>
+                        <li>In the case of use of your own stand, the walls and lettering are removed.</li>
                         </div>
                           </td></tr>
                   </tr>
                   <tr class="item alternate">
-                    <td><div class="toggle">+</div>Stand 4 dias</td><td>3€</td>
-                          <tr class="description"><td colspan="2" class="noPadding">
+                    <td><div class="toggle">+</div>Stand for 4 days</td><td>5€</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
-                              <h3>Stand 4 dias</h3>
-                        <p>Possibilidade de colocar um stand durante o evento ou fora deste durante um dos eventos organizados pela SINFO, noutra data, dentro ou fora do Instituto Superior Técnico.
+                              <h3>Stand for 4 days</h3>
+                        <p>You will have the possibility to rent a (or bring your own) stand during the event, at Instituto Superior Técnico. Additionally, with “+University” this presence can be extended to more universities and more days, reaching an even higher number of students and potential candidates.
                         </p>
-                        <li>Dimensões 3 x 3 x 2,5 metros</li>
-                        <li>Alcatifado.</li>
-                        <li>Parede atrás, e dos lados caso o stand esteja ao lado de um outro stand.</li>
-                        <li>Ficha electrica tripla.</li>
-                        <li>3 focos de luz.</li>
-                        <li>Lettering com o nome da empresa.</li>
-                        <li>2 mesas</li>
-                        <li>2 cadeiras</li>
+                        <p>IST stand specifications:</p>
+                        <li>Dimensions: 3x3x2.5m;</li>
+                        <li>Carpeted;</li>
+                        <li>Back wall. (Side walls in case of being next to another stand);</li>
+                        <li>Electricity - three (3) plugs;</li>
+                        <li>Lights - three (3) spot lights;</li>
+                        <li>Lettering with the company’s name;</li>
+                        <li>Two (2) tables;</li>
+                        <li>Two (2) chairs;</li>
+                        <li>In the case of use of your own stand, the walls and lettering are removed.</li>
                         </div>
                           </td></tr>
                   </tr>
