Idividual Items almost finished

--- a/sponsor.html
+++ b/sponsor.html
@@ -770,26 +770,26 @@
 						</div>
 					</div>
 					<div class="container">
-						<div class="heading"><div class="toggleHead">+</div>Publicidade</div>
+						<div class="heading"><div class="toggleHead">+</div>Publicity</div>
             <div class="content">
               <div class="indPackDescription">
                 <table class="all-100">
                   <tbody>
                     <tr class="item">
-                      <td><div class="toggle">+</div>Logo in our website</td><td>1€</td>
+                      <td><div class="toggle">+</div>Logo on the website</td><td>1€</td>
                             <tr class="description"><td colspan="2" class="noPadding">
                               <div class="shadow">
-                                <h3>Logo in our website</h3>
-                          <p>Logotipo no site na secção dos patrocinadores do evento.</p>
+                                <h3>Logo on the website</h3>
+                          <p>The Company logo will be on our Sponsor's sections.</p>
                         </div>
                             </td></tr>
                     </tr>
                     <tr class="item alternate">
-                    <td><div class="toggle">+</div>Dar Workshop</td><td>5€</td>
+                    <td><div class="toggle">+</div>Giving a Workshop</td><td>5€</td>
                           <tr class="description"><td colspan="2" class="noPadding">
                             <div class="shadow">
-                              <h3>Dar Workshop</h3>
-                              <p>Possibilidade de dar um Workshop a uma plateia de alunos que visitam o evento.</p>
+                              <h3>Giving a Workshop</h3>
+                              <p>You will have the possibility to give a Workshop to and audience of students that are present during the event</p>
                             </div>
                           </td></tr>
                     </tr>
@@ -804,36 +804,33 @@
                           </td></tr>
                   </tr>
                   <tr class="item alternate">
-                    <td><div class="toggle">+</div>Logo on posters</td><td>2€</td>
+                    <td><div class="toggle">+</div>Logo on our poster</td><td>2€</td>
                           <tr class="description"><td colspan="2" class="noPadding">
                             <div class="shadow">
-                              <h3>Logo on posters</h3>
-                        <p>The company's logo will be included in all posters posted at IST, other major colleges in our country and<br>
-                        the advertising partners SINFO.</p>
+                              <h3>Logo on our poster</h3>
+                        <p>The Company logo will be on our posters that will be hung at Instituto Superior Técnico and in many others Universities in the country.</p>
                       </div>
                           </td></tr>
                   </tr>
                   <tr class="item">
-                    <td><div class="toggle">+</div>Logo on banners</td><td>5€</td>
+                    <td><div class="toggle">+</div>Logo on online banners</td><td>5€</td>
                           <tr class="description"><td colspan="2" class="noPadding">
                             <div class="shadow">
-                              <h3>Logo on banners</h3>
-                        <p>The company's logo will be included in all banners that we have at campus gates as well as in several<br>
-                        campus buildings.</p>
+                              <h3>Logo on online banners</h3>
+                        <p>The Company logo will be online on websites and blogs meant to spread SINFO.</p>
                         <p><small>Banner placed at the main entrance of the IST (at Alameda campus) in the nineteenth edition of SINFO.</small></p>
                       </div>
                           </td></tr>
                   </tr>
                   <tr class="item alternate">
-                    <td><div class="toggle">+</div>Logo on placemats</td><td>4€</td>
+                    <td><div class="toggle">+</div>Logo on tray mats</td><td>4€</td>
                           <tr class="description"><td colspan="2" class="noPadding">
                             <div class="shadow">
-                              <h3>Logo on placemats</h3>
-                        <p>The company's logo will be placed in individual placemats.</p>
-                        <p>Placemats will be placed in the week prior to the event and the week of the event at:</p>
+                              <h3>Logo on tray mats</h3>
+                        <p>The Company logo will be on the tray mats distributed the week before throughout many universities and cafeterias:</p>
                         <ul>
-                          <li>All the IST canteens.</li>
-                          <li>Other Lisbon universities' canteens.</li>
+                          <li>Every Técnico’s cafeterias;</li>
+                          <li>ISEL, Cidade Universitária and other cafeterias.</li>
                         </ul>
                       </div>
                           </td></tr>
