Updated some publicity itens

--- a/sponsor.html
+++ b/sponsor.html
@@ -385,6 +385,9 @@
 									<tr class="alterprice">
 										<td>Individual Price</td><td>1.360€</td><td>2.660€</td><td>4.595€</td><td>7.805€</td>
 									</tr>
+                  <tr>
+                     <td colspan="5">* Choose just one: either a presentation or 2 days of stand.</td>
+                  </tr>
 									<tr class="perks">
 										<td colspan="5"><h3>Perks</h3></td>
 									</tr>
@@ -417,8 +420,17 @@
 										</tr>
 									</thead>
 									<tbody>
-									<tr class="item">
-										<td><div class="toggle">+</div>Cover's logo</td><td>S</td><td>M</td><td>L</td><td>L</td>
+									<tr class="item alternate">
+                    <td><div class="toggle">+</div>Cover's documentation</td><td>1</td><td>1</td><td>L</td><td>L</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Cover's documentation</h3>
+                        <p>The Company's documentation, pamphlets, or other element related to the Company will be included in the covers we give out during the event.</p>
+                      </div>
+                    </td></tr>
+                  </tr>
+                  <tr class="item">
+										<td><div class="toggle">+</div>Cover's logo</td><td>S</td><td>S</td><td>L</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Cover's logo</h3>
@@ -427,7 +439,17 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Presentation posts on our Social Networks</td><td>-</td><td>1</td><td>2</td><td>3</td>
+                    <td><div class="toggle">+</div>Logo on our programs</td><td>S</td><td>S</td><td>L</td><td>L</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on our programs</h3>
+                        <p>The Company logo will be on the event’s programs that we give out during it to every visitor</p>
+                        <p><small>Timetable of twentieth edition of SINFO.</small></p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+										<td><div class="toggle">+</div>Presentation posts on our Social Networks</td><td>1</td><td>2</td><td>2</td><td>3</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Presentation posts on our Social Networks</h3>
@@ -448,17 +470,8 @@
 											</div>
 							      </td></tr>
 									</tr>
-									<tr class="item alternate">
-										<td><div class="toggle">+</div>Cover's documentation</td><td>-</td><td>M</td><td>L</td><td>L</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Cover's documentation</h3>
-												<p>The Company's documentation, pamphlets, or other element related to the Company will be included in the covers we give out during the event.</p>
-											</div>
-							      </td></tr>
-									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Showcase logo</td><td>-</td><td>M</td><td>L</td><td>L</td>
+										<td><div class="toggle">+</div>Showcase logo</td><td>S</td><td>S</td><td>L</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Showcase logo</h3>
@@ -466,6 +479,9 @@
 											</div>
 							            </td></tr>
 									</tr>
+
+
+
 									<tr class="item alternate">
 										<td><div class="toggle">+</div>Logo on our poster</td><td>-</td><td>M</td><td>L</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
@@ -488,16 +504,7 @@
 											</div>
 							            </td></tr>
 									</tr>
-									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on our programs</td><td>-</td><td>M</td><td>L</td><td>L</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Logo on our programs</h3>
-												<p>The Company logo will be on the event’s programs that we give out during it to every visitor</p>
-												<p><small>Timetable of twentieth edition of SINFO.</small></p>
-											</div>
-							            </td></tr>
-									</tr>
+									
 									<tr class="item">
 										<td><div class="toggle">+</div>T-shirt logo</td><td>-</td><td>-</td><td>L</td><td>XL</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
@@ -606,10 +613,10 @@
                           </td></tr>
                   </tr>
 									<tr class="price">
-										<td>Price</td><td>5€</td><td>5€</td><td>5€</td><td>5€</td>
+										<td>Price</td><td>450€</td><td>600€</td><td>1.500€</td><td>2.500€</td>
 									</tr>
 									<tr class="alterprice">
-										<td>Individual Price</td><td>10€</td><td>10€</td><td>10€</td><td>10€</td>
+										<td>Individual Price</td><td>610€</td><td>910€</td><td>2.095€</td><td>3.505€</td>
 									</tr>
 									</tbody>
 								</table>
@@ -785,6 +792,8 @@
               <div class="indPackDescription">
                 <table class="all-100">
                   <tbody>
+
+
                     <tr class="item">
                       <td><div class="toggle">+</div>Logo on the website</td><td>1€</td>
                             <tr class="description"><td colspan="2" class="noPadding">
